--- a/app/src/main/res/drawable/login_shape_bk.xml
+++ b/app/src/main/res/drawable/login_shape_bk.xml
@@ -7,7 +7,7 @@
         android:topRightRadius="0dp"
         />
     <solid
-        android:color="@color/correct"
+        android:color="@color/primaryTextColor"
         />
     <size
         android:width="182dp"
