--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -22,8 +22,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/parent"
-        android:layout_marginTop="@dimen/signup_text_margin_top">
-        <EditText
+        android:layout_marginTop="@dimen/signup_text_margin_top"
+        app:startIconDrawable="@drawable/ic_baseline_account">
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_name"
             style="@style/modifiedEditText"
             android:inputType="text"
@@ -33,19 +34,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/parent"
-        android:layout_marginTop="@dimen/signup_text_margin_top">
-        <EditText
-            android:id="@+id/sign_number"
-            style="@style/modifiedEditText"
-            android:inputType="text"
-            android:maxLines="1"
-            android:hint="Mobile Number"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/parent"
-        android:layout_marginTop="@dimen/signup_text_margin_top">
-        <EditText
+        android:layout_marginTop="@dimen/signup_text_margin_top"
+        app:startIconDrawable="@android:drawable/sym_action_email">
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_email"
             style="@style/modifiedEditText"
             android:inputType="textEmailAddress"
@@ -55,13 +46,16 @@
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/parent"
-        android:layout_marginTop="@dimen/signup_text_margin_top">
-        <EditText
+        android:layout_marginTop="@dimen/signup_text_margin_top"
+        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
+        app:endIconMode="password_toggle">
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_password"
             style="@style/modifiedEditText"
             android:hint="@string/login_password_hint"
             android:maxLines="1"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
