--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,10 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="Toggle Dark Mode"
-        android:id="@+id/enable_dark_mode"
+        android:title="Dark Mode"
+        android:id="@+id/dark_mode"
         android:icon="@drawable/icon_dark_mode"
         app:showAsAction="always"
         />
+
+    <item
+        android:title="Logout"
+        android:id="@+id/logout"
+        app:showAsAction="always"
+        />
+
 
 </menu>
